# modules/delivery/web/v1/todo/handler.go
@@ -2,6 +2,7 @@ package todo
 
 import (
 	"net/http"
+	"strconv"
 	"todolist-api/modules/domains"
 	"todolist-api/modules/domains/todo"
 
@@ -24,8 +25,8 @@ func BindRoutes(server *echo.Echo, handler *Handler) {
 	group.GET("", handler.GetAll)
 	group.GET("/:id", handler.Get)
 	group.POST("", handler.Post)
-	group.PATCH("", handler.Patch)
-	group.DELETE("", handler.Delete)
+	group.PATCH("/:id", handler.Patch)
+	group.DELETE("/:id", handler.Delete)
 }
 
 // GetAll todo get all
@@ -34,18 +35,31 @@ func BindRoutes(server *echo.Echo, handler *Handler) {
 // @Summary todo get all
 // @Description todo get all
 // @Router /todos [get]
+// @Param _ query Params true "params"
 // @Security ApiKeyAuth
 // @Produce json
-// @Success 200 {object} []Item
-// @Success 204 ""
+// @Success 200 {object} ManyItemResponse
 // @Failure 400 {object} interface{}
 // @Failure 500 {object} interface{}
 func (h Handler) GetAll(c echo.Context) error {
-	items, err := h.FetchAll(5, 10)
+	var param Params
+	if err := c.Bind(&param); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+	if err := c.Validate(&param); err != nil {
+		return err
+	}
+	page, limit := param.Pagination()
+	items, err := h.FetchAll(page, limit)
 	if err != nil {
 		return domains.JSONResponse(c, http.StatusInternalServerError, err.Error())
 	}
-	return domains.JSONResponse(c, http.StatusOK, items)
+	response := ManyItemResponse{
+		Todos: items,
+		Page:  page + 1,
+		Limit: limit,
+	}
+	return domains.JSONResponse(c, http.StatusOK, response)
 }
 
 // Get todo get
@@ -53,16 +67,24 @@ func (h Handler) GetAll(c echo.Context) error {
 // @Tags todo
 // @Summary todo get
 // @Description todo get
-// @Router /todos/:id [get]
+// @Router /todos/{id} [get]
+// @Param id path uint64 true "id"
 // @Security ApiKeyAuth
 // @Produce json
-// @Success 200 {object} interface{}
-// @Success 204 ""
+// @Success 200 {object} todo.Item
 // @Failure 400 {object} interface{}
 // @Failure 500 {object} interface{}
-func (h Handler) Get(c echo.Context) error {
-
-	return nil
+func (h Handler) Get(c echo.Context) (err error) {
+	ID := c.Param("id")
+	id, err := strconv.Atoi(ID)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+	item, err := h.Fetch(uint64(id))
+	if err != nil {
+		return domains.JSONResponse(c, http.StatusInternalServerError, err.Error())
+	}
+	return domains.JSONResponse(c, http.StatusOK, item)
 }
 
 // Post todo post
@@ -71,14 +93,26 @@ func (h Handler) Get(c echo.Context) error {
 // @Summary todo post
 // @Description todo post
 // @Router /todos [post]
+// @Param body body Body true "body"
 // @Security ApiKeyAuth
 // @Produce json
-// @Success 200 {object} interface{}
-// @Success 204 ""
+// @Success 200 {object} todo.Item
 // @Failure 400 {object} interface{}
 // @Failure 500 {object} interface{}
 func (h Handler) Post(c echo.Context) error {
-	return nil
+	item := &todo.Item{}
+	if err := c.Bind(item); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+	if err := c.Validate(item); err != nil {
+		return err
+	}
+
+	err := h.Insert(item)
+	if err != nil {
+		return domains.JSONResponse(c, http.StatusInternalServerError, err.Error())
+	}
+	return domains.JSONResponse(c, http.StatusOK, item)
 }
 
 // Patch todo patch
@@ -86,15 +120,35 @@ func (h Handler) Post(c echo.Context) error {
 // @Tags todo
 // @Summary todo patch
 // @Description todo patch
-// @Router /todos [patch]
+// @Router /todos/{id} [patch]
+// @Param id path uint64 true "id"
+// @Param body body Body true "body"
 // @Security ApiKeyAuth
 // @Produce json
 // @Success 200 {object} interface{}
-// @Success 204 ""
 // @Failure 400 {object} interface{}
 // @Failure 500 {object} interface{}
 func (h Handler) Patch(c echo.Context) error {
-	return nil
+	ID := c.Param("id")
+	id, err := strconv.Atoi(ID)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+	body := &Body{}
+	if err := c.Bind(body); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+	if err := c.Validate(body); err != nil {
+		return err
+	}
+	updated, err := h.Service.Update(uint64(id), body.Title)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+	}
+	if updated == nil {
+		return domains.JSONResponse(c, http.StatusNotFound, nil)
+	}
+	return domains.JSONResponse(c, http.StatusOK, updated)
 }
 
 // Delete todo delete
@@ -102,13 +156,26 @@ func (h Handler) Patch(c echo.Context) error {
 // @Tags todo
 // @Summary todo delete
 // @Description todo delete
-// @Router /todos [delete]
+// @Router /todos/{id} [delete]
+// @Param id path uint64 true "id"
 // @Security ApiKeyAuth
 // @Produce json
-// @Success 200 {object} interface{}
 // @Success 204 ""
 // @Failure 400 {object} interface{}
 // @Failure 500 {object} interface{}
 func (h Handler) Delete(c echo.Context) error {
-	return nil
+	ID := c.Param("id")
+	id, err := strconv.Atoi(ID)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+	affected, err := h.Service.Delete(uint64(id))
+	if err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+	}
+	if affected == 0 {
+		return domains.JSONResponse(c, http.StatusNotFound, nil)
+	}
+
+	return domains.JSONResponse(c, http.StatusNoContent, nil)
 }
